Created new Rotation Activity, and fixed so when on table switch to rotationActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RotationActivity"
+            android:label="@string/title_activity_rotation" >
+        </activity>
+
     </application>
 
 </manifest>
