Added RotationActivity2  with the code from http://www.codeproject.com/Articles/729759/Android-Sensor-Fusion-Tutorial. I have not added code to extract the angle from the matrix.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
             android:name=".RotationActivity"
             android:label="@string/title_activity_rotation" >
         </activity>
-
+        <activity
+            android:name=".RotationActivity2"
+            android:label="@string/title_activity_rotation_activity2" >
+        </activity>
     </application>
 
 </manifest>
